--- a/contact.html
+++ b/contact.html
@@ -66,12 +66,17 @@
             </div>
 
             <form>
-                <div class="form-group ">
+                <div class="form-connexion-input">
+                    <span class="error"></span>
                     <input type="text " class="form-control " id="exampleInputEmail1 " aria-describedby="emailHelp " placeholder="Prénom ">
+
                 </div>
-                <div class="form-group ">
+                <div class="form-connexion-input">
+                    <span class="error"></span>
                     <input type="text " class="form-control " id="exampleInputPassword1 " placeholder="Nom ">
+
                 </div>
+
                 <div class="form-group ">
                     <textarea id="subject " name="subject " placeholder="Write something.. " style="height:170px "></textarea>
                 </div>
